Correcting Text Alignment, Experimenting With Paths & Remote Photos

--- a/screen.css
+++ b/screen.css
@@ -12,7 +12,7 @@ h1 { font-size: 30px; }
 h2 { font-size: 28px; margin-bottom: -7px; padding-top: 67px;  margin-left: -150px; padding-left: 150px; background: linear-gradient(to bottom, #f9f9f9 86px, transparent 10px); }
 h3 { font-size: 25px; margin-bottom: -8px; padding-top: 8px; }
 h4 { font-size: 20px; margin-bottom: -8px; padding-top: 8px; }
-p { font-size: 20px; margin-bottom: 22px; margin-right: 30px; padding-top: 9px; }
+p { font-size: 20px; margin-bottom: 21px; margin-right: 30px; padding-top: 9px; }
 ul { margin-top: -30px; margin-left: 18px; padding-top: 8px; }
 ul > li { font-size: 20px; }
 blockquote { font-size: 20px; }
